Added exportImage method to controllerImpl
Also gave controller reference to PimpEditorPane

--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,12 @@
       <version>${java-version}</version>
     </dependency>
 
+   <dependency>
+      <groupId>org.openjfx</groupId>
+      <artifactId>javafx-swing</artifactId>
+      <version>${java-version}</version>
+    </dependency>
+
     <dependency>
       <groupId>org.openjfx</groupId>
       <artifactId>javafx-controls</artifactId>
