Changes back to oraclejdk12

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 dist: trusty
 language: java
 jdk:
-  - openjdk12
+  - oraclejdk12
 notifications:
   email: false
   slack: smash-bros-workspace:IRqJyRAcRp0P6hAxhyw3edEo
